# DuckHunt

./: .gitignore  CMakeLists.txt  DuckHunt.sln  DuckHunt.vcxproj  DuckHunt.vcxproj.filters  README.md  application.cpp  application.h  application_interface.h  configuration.cpp  configuration.h  desktop_launcher.cpp  duckhunt.cpp  duckhunt.h  graphics.cpp  graphics.h  input.cpp  listener.h  logger.cpp  save.txt
Debug/: DuckHunt.ilk  DuckHunt.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/DuckHunt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DuckHunt.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: sdl2-config.cmake
src/: duckhunt.cpp  duckhunt.h
src/core/: duckhunt.cpp  game_state_manager.cpp  game_utils.cpp
src/core/audio/: audio_system.cpp
src/core/audio/include/: audio_system.h
src/core/data/: assets.cpp  current_game_data.cpp  data_system.cpp  dog_data.cpp  ducks_db.cpp  mod_assets.cpp  user_data.cpp
src/core/data/include/: current_game_data.h  data_system.h  dog_data.h  ducks_db.h  mod_assets.h  user_data.h
src/core/game_object/: black_duck.cpp  blue_duck.cpp  dog.cpp  duck.cpp  entity.cpp  entity_animated.cpp  game_object.cpp  red_duck.cpp
src/core/game_object/generic/: entity_animated.cpp  game_object.cpp  sprite_parsable.cpp
src/core/game_object/include/: black_duck.h  blue_duck.h  dog.h  (+5 more)
src/core/graphics/: abstract_screen.cpp  duck_renderer.cpp  fonts.cpp  game_object_renderer.cpp  graphics_system.cpp  loading_screen.cpp  loading_screen.h  menu_screen.cpp  playing_screen.cpp  shots_receiver.cpp
src/core/include/: duckhunt.h  game_state_manager.h  game_utils.h
src/core/logic/: logic_system.cpp  mod_create_objects.cpp  mod_difficulty_controller.cpp  mod_duck_create.cpp  mod_duck_movement.cpp  mod_duck_spawner.cpp  mod_duck_tracker.cpp  mod_event_handler.cpp  mod_game_object_movement.cpp  mod_input_handler.cpp  mod_logic.cpp  mod_objects_handler.cpp  mod_round.cpp  mod_score.cpp  mod_script_handler.cpp  mod_shots.cpp
src/desktop/: desktop_launcher.cpp
src/lib/: application.cpp  audio.cpp  configuration.cpp  graphics.cpp  input.cpp  logger.cpp
src/lib/include/: application.h  audio.h  configuration.h  graphics.h  input.h  lib.h  listener.h
src/lib/utils/: camera.cpp  music.cpp  orthographic_camera.cpp  orthographic_camera.h  sound.cpp  sprite_batch.cpp  texture.cpp  texture_region.cpp  universal_viewport.cpp  viewport.cpp
src/utils/: application.cpp  graphics.cpp  input.cpp  lib.cpp  logger.cpp  texture.cpp
src/utils/include/: application.h  application_interface.h  graphics.h  input.h  lib.h  listener.h  logger.h  texture.h
(+91 files in other folders)
